--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ awsSdk = "2.35.11"
 jackson = "2.20.0"
 log4j = "2.25.0"
 mockito = "5.20.0"
-pact = "4.6.18"
+pact = "4.6.17"
 powertools = "2.5.0"
 
 [libraries]
@@ -38,8 +38,8 @@ mockitoJunit = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mo
 nimbusdsOauth2OidcSdk = "com.nimbusds:oauth2-oidc-sdk:11.30"
 openTelemetryBom = "io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:2.20.1-alpha"
 openTelemetryJavaHttpClient = { module = "io.opentelemetry.instrumentation:opentelemetry-java-http-client" }
-pactConsumerJunit = { module = "au.com.dius.pact.consumer:junit5", version.ref = "pact" }
-pactProviderJunit = { module = "au.com.dius.pact.provider:junit5", version.ref = "pact" }
+pactConsumerJunit = "au.com.dius.pact.consumer:junit5:4.6.19"
+pactProviderJunit = "au.com.dius.pact.provider:junit5:4.6.19"
 powertoolsLogging = { module = "software.amazon.lambda:powertools-logging-log4j", version.ref = "powertools" }
 powertoolsMetrics = { module = "software.amazon.lambda:powertools-metrics", version.ref = "powertools" }
 powertoolsParameters = { module = "software.amazon.lambda:powertools-parameters", version.ref = "powertools" }
