--- a/build.gradle
+++ b/build.gradle
@@ -49,10 +49,7 @@ subprojects {
 
 allprojects {
 	configurations.configureEach {
-		resolutionStrategy {
-			// Remove once pact pulls in this or a newer version
-			force 'org.apache.tika:tika-core:3.2.3'
-		}
+		exclude group: 'org.apache.tika', module: 'tika-parser-pdf-module'
 	}
 
 	plugins.withType(JavaPlugin).whenPluginAdded {
