PYIC-8443: Exclude Netty libraries
Netty is used by pact and has some vulnerabilities. This PR stops Netty libraries being used in core-back and so will ensure the vulnerabilities cannot affect us.

--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ subprojects {
 allprojects {
 	configurations.configureEach {
 		exclude group: 'org.apache.tika', module: 'tika-parser-pdf-module'
+		// Exclude netty in general
+		exclude group: "io.netty", module: "*"
+		exclude group: "io.grpc", module: "grpc-netty"
 	}
 
 	plugins.withType(JavaPlugin).whenPluginAdded {
