--- a/lambdas/issue-client-access-token/build.gradle
+++ b/lambdas/issue-client-access-token/build.gradle
@@ -28,6 +28,12 @@ dependencies {
 			project(path: ':libs:common-services', configuration: 'tests'),
 			project(path: ':libs:test-helpers')
 
+	constraints {
+		testImplementation('io.netty:netty-codec-http2:4.1.124.Final') {
+			because "this version patches the vulnerability CVE-2025-55163"
+		}
+	}
+
 	mockitoAgent(libs.mockitoCore) {
 		transitive = false
 	}
