--- a/libs/test-helpers/build.gradle
+++ b/libs/test-helpers/build.gradle
@@ -24,6 +24,12 @@ dependencies {
 			libs.hamcrest,
 			libs.mockitoJunit
 
+	constraints {
+		testImplementation('io.netty:netty-codec-http2:4.1.124.Final') {
+			because "this version patches the vulnerability CVE-2025-55163"
+		}
+	}
+
 	mockitoAgent(libs.mockitoCore) {
 		transitive = false
 	}
