--- a/lambdas/user-reverification/build.gradle
+++ b/lambdas/user-reverification/build.gradle
@@ -29,6 +29,10 @@ dependencies {
 		testImplementation('io.netty:netty-codec-http2:4.1.124.Final') {
 			because "this version patches the vulnerability CVE-2025-55163"
 		}
+
+		testImplementation('io.netty:netty-codec-http:4.1.129.Final') {
+			because "this version patches the vulnerabilities CVE-2025-67735 and CVE-2025-58056"
+		}
 	}
 
 	mockitoAgent(libs.mockitoCore) {
